aos overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+section, footer {
+  overflow: hidden;
+}
+
 .section-padding {
   padding: 10rem 0;
 }
